"""
Upload router
Handles file upload presigned URLs and transformations
"""
from fastapi import APIRouter, Depends, HTTPException, status
from models.upload import (
    PresignedUrlRequest, PresignedUrlResponse,
    CompleteUploadRequest, CompleteUploadResponse,
    TransformRequest, TransformResponse,
    QuotaResponse
)

router = APIRouter()


@router.post("/presign", response_model=PresignedUrlResponse)
async def generate_presigned_url(request: PresignedUrlRequest):
    """
    Generate S3 presigned URL for direct upload
    Enforces: Content-Length, Content-Type, SHA-256 checksum
    TTL: 10 minutes
    """
    # TODO: Call gRPC UploadService.GeneratePresignedUrl
    # TODO: Check quota before generating URL
    # TODO: Return presigned URL with required headers
    raise HTTPException(
        status_code=status.HTTP_501_NOT_IMPLEMENTED,
        detail="Not implemented yet"
    )


@router.post("/complete", response_model=CompleteUploadResponse)
async def complete_upload(request: CompleteUploadRequest):
    """
    Confirm upload completion and trigger processing
    """
    # TODO: Verify upload exists and matches checksum
    # TODO: Update quota usage
    # TODO: Trigger virus scan + transformations
    raise HTTPException(
        status_code=status.HTTP_501_NOT_IMPLEMENTED,
        detail="Not implemented yet"
    )


@router.post("/transform", response_model=TransformResponse)
async def transform_object(request: TransformRequest):
    """
    Apply transformation to uploaded object
    (resize, compress, format conversion)
    """
    # TODO: Validate transform profile exists
    # TODO: Queue transformation job
    # TODO: Return job ID for status tracking
    raise HTTPException(
        status_code=status.HTTP_501_NOT_IMPLEMENTED,
        detail="Not implemented yet"
    )


@router.get("/quota", response_model=QuotaResponse)
async def get_quota():
    """
    Get current tenant quota usage
    """
    # TODO: Fetch from database
    # TODO: Calculate usage across all users in tenant
    raise HTTPException(
        status_code=status.HTTP_501_NOT_IMPLEMENTED,
        detail="Not implemented yet"
    )
